[package]
name = "ram_core"
version = "1.4.1"
edition = "2021"
description = "VH Roblox Manager — Core library"
license = "MIT"
repository = "https://gitlab.com/centerepic/robloxmanager"
authors = ["Varatos99"]
# Honorable mention: centerepic

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
urlencoding = "2"

aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
keyring = { version = "3", features = ["windows-native"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_System_Memory",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dwm",
] }
sysinfo = "0.32"
