[package]
name = "VHRobloxManager"
version = "1.4.1"
edition = "2021"
description = "VH Roblox Manager — Roblox Account Manager"
license = "MIT"
repository = "https://github.com/Varatos99/VHRobloxManager"
authors = ["Varatos99"]

[dependencies]
ram_core = { path = "../ram_core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
uuid = { workspace = true }
chrono = "0.4"

eframe = "0.30"
egui_extras = { version = "0.30", features = ["image", "http"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "ico"] }
rfd = "0.15"
wry = "0.44"
winit = "0.29"
windows-sys = "0.48"
reqwest = { version = "0.12", features = ["json", "blocking"] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
